--- a/chickenfry.html
+++ b/chickenfry.html
@@ -7,7 +7,7 @@
     <body>
         <h1>
             2.Chicken Fry</h1>
-        <img src="d:\noodles.jpg" width="300px" height="200px">
+        <img src="Pics\fry.jpg" width="300px" height="200px">
         <p>Easy chicken fry recipe: a simple and basic recipe for making chicken fry using cubed boneless chicken pieces and spices. There are probably thousands of different variations to an easy chicken fry recipe including what you can add to the marinade, the quantity of spices, whether you use pepper powder or not, etc.
             </p>
             <h3>Ingredients</h3>
