--- a/chickennoodles.html
+++ b/chickennoodles.html
@@ -7,7 +7,7 @@
     <body>
         <h1>
             2.Chicken Noodles</h1>
-        <img src="d:\noodles.jpg" width="300px" height="200px">
+        <img src="Pics\noodles.jpg" width="300px" height="200px">
         <p>
             No matter what recipe they're used in, rice noodles are a proven crowd-pleaser. I think this spicy chicken noodles dish is perfect for using up leftover chicken, assuming it wasn't horribly overcooked in the first place. If you did want to use raw chicken, go ahead and chop it up, and stir-fry it for a minute or two before adding your vegetables.
             </p>
