--- a/chickenfried.html
+++ b/chickenfried.html
@@ -8,7 +8,7 @@
         <h1>
             1.Chicken Rice
         </h1>
-        <img src="Pic/chicken1.jpeg" width="300px" height="200px">
+        <img src="Pics/chicken1.jpeg" width="300px" height="200px">
         <p>
             Chicken Fried Rice, most popular and loved rice dish in and around the world. Every parts of the world has their own way of making chicken fried rice. This is a quick version of chicken fried rice made with chicken and vegetables very similar to take out fried rice. It is best to use day old rice for making fried rice just like my egg fried rice and prawn fried rice. Learn how to make chicken fried rice with step by step pictures and video.
 
